package haptix.comm.msgs;

/// \ingroup haptix_comm_msgs
/// \interface hxCollideMode
/// \brief Information about the collision modes for simulated objects.
/// NO_COLLIDE means the object will pass through other objects, and the
/// simulation does not know if this event occurs. hxs_contacts will not
/// generate contact points.
/// DETECTION_ONLY means that the object will pass through other objects, and
/// the simulation will detect when the object collides. hxs_contacts will
/// generate contact points when this happens, but the force and torque values
/// of the hxContactPoint struct will be invalid.
/// COLLIDE means that the object will obey the laws of physics and the
/// simulation will generate forces when it collides with other objects.

message hxCollideMode
{
  enum Mode
  {
    hxsNOCOLLIDE     = 1;
    hxsDETECTIONONLY = 2;
    hxsCOLLIDE       = 3;
  }

  required Mode mode = 1;
}
